regression/parse_pool/progtest9.sfp.out

sfc in program parse_pool/progtest9.sfp
syntax error at line 3, position 30:
event-condition bar { timer == 8192 TYPE_SECOND }
                             ^
